[package]
name = "rustenium-bidi-commands"
version = "0.1.0"
edition = "2024"
description = "WebDriver BiDi command types and structures for Rustenium"
license = "MIT"
categories = ["web-programming", "data-structures"]
keywords = ["webdriver", "bidi", "commands", "types", "protocol"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_valid = "2.0.0"