[package]
name = "rustenium-bidi-commands"
version = "0.1.1"
edition = "2024"
description = "WebDriver BiDi command types and structures for Rustenium"
license = "MIT"
repository = "https://github.com/dashn9/rustenium"
homepage = "https://github.com/dashn9/rustenium"
documentation = "https://docs.rs/rustenium-bidi-commands"
readme = "README.md"
categories = ["web-programming", "data-structures"]
keywords = ["webdriver", "bidi", "commands", "types", "protocol"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_valid = "2.0.0"