[package]
name = "rustenium-bidi-definitions"
version = "0.1.0"
edition = "2024"
description = "Generated WebDriver BiDi protocol type definitions for Rustenium"
license = "MIT"
repository = "https://github.com/dashn9/rustenium"
homepage = "https://github.com/dashn9/rustenium"
documentation = "https://docs.rs/rustenium-bidi-definitions"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_valid = "2.0.1"
