[package]
name = "rustenium-generator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.97"
cddl = "0.10.3"
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_valid = "2.0.0"
