[package]
name = "rustenium-macros"
version = "0.1.0"
edition = "2024"
description = "Convenience macros for Rustenium (css! and xpath! selectors)"
license = "MIT"
repository = "https://github.com/dashn9/rustenium"
homepage = "https://github.com/dashn9/rustenium"
categories = ["development-tools", "web-programming"]
keywords = ["macros", "css", "xpath", "selectors", "webdriver"]

[dependencies]
rustenium-bidi-commands = { version = "0.1.0", path = "../rustenium-bidi-commands" }
