[package]
name = "rustenium-macros"
version = "1.0.0"
edition = "2024"
description = "Convenience macros for Rustenium (css! and xpath! selectors)"
license = "MIT"
repository = "https://github.com/dashn9/rustenium"
homepage = "https://github.com/dashn9/rustenium"
documentation = "https://docs.rs/rustenium-macros"
readme = "README.md"
categories = ["development-tools", "web-programming"]
keywords = ["macros", "css", "xpath", "selectors", "webdriver"]

[dependencies]
rustenium-bidi-definitions = { version = "0.1.0", path = "../rustenium-bidi-definitions" }
