[package]
name = "rustenium"
version = "0.1.2"
edition = "2024"
description = "A modern, high-performance WebDriver BiDi automation library for Rust"
license = "MIT"
repository = "https://github.com/dashn9/rustenium"
homepage = "https://github.com/dashn9/rustenium"
documentation = "https://docs.rs/rustenium"
readme = "../README.md"
categories = ["web-programming", "development-tools::testing", "api-bindings"]
keywords = ["webdriver", "browser", "automation", "testing", "selenium"]

[features]
default = []
macros = ["rustenium-macros"]

[dependencies]
rustenium-core = { version = "0.1.2", path = "../rustenium-core" }
rustenium-bidi-commands = { version = "0.1.1", path = "../rustenium-bidi-commands" }
rustenium-macros = { version = "0.1.1", path = "../rustenium-macros", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
serde_json = "1.0.145"
base64 = "0.22"
tracing = "0.1"

[dev-dependencies]
rustenium-macros = { version = "0.1.1", path = "../rustenium-macros" }